--- a/.github/workflows/generate_mihomo.mrs.yml
+++ b/.github/workflows/generate_mihomo.mrs.yml
@@ -52,17 +52,15 @@ jobs:
           if [ ! -f "$FILE_PATH" ]; then
             echo "Error: mihomo.txt was not generated after $MAX_RETRIES attempts."
             exit 1
-          else
+          else:
             echo "mihomo.txt successfully generated."
           fi
 
       - name: Download Mihomo (linux-amd64)
         run: |
-          curl -s https://api.github.com/repos/MetaCubeX/mihomo/releases \
-            | grep "browser_download_url.*mihomo-linux-amd64.*.gz" \
-            | head -n 1 \
-            | cut -d '"' -f 4 \
-            | xargs wget -q -O mihomo-linux-amd64.gz
+          curl -s https://api.github.com/repos/MetaCubeX/mihomo/releases/latest \
+            | jq -r '.assets[] | select(.name | test("linux-amd64.*\\.gz$")) | .browser_download_url' \
+            | wget -q -O mihomo-linux-amd64.gz -i -
           gunzip -f mihomo-linux-amd64.gz
           chmod +x mihomo-linux-amd64
 
