--- a/.github/workflows/generate_mihomo.mrs.yml
+++ b/.github/workflows/generate_mihomo.mrs.yml
@@ -1,4 +1,4 @@
-name: Generate Mihomo MRS Rules
+name: Generate Mihomo MRS Rules (Direct to MRS)
 
 on:
   schedule:
@@ -18,45 +18,12 @@ jobs:
       - name: Pull Changes
         run: git pull
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: pip install requests
-
-      - name: Clean old files
-        run: rm -f data/rules/mihomo.txt data/rules/adblock.mrs
-
-      - name: Generate merged rule txt
-        id: generate_rules
-        run: python data/python/generate_mihomo_txt.py
-
-      - name: Check and Retry mihomo.txt Generation
-        id: check_mihomo_txt
+      - name: Install Dependencies
         run: |
-          MAX_RETRIES=3
-          RETRY_INTERVAL=5  # seconds
-          FILE_PATH="data/rules/mihomo.txt"
-          retry_count=0
+          sudo apt update
+          sudo apt install -y curl wget git jq
 
-          while [ ! -f "$FILE_PATH" ] && [ "$retry_count" -lt "$MAX_RETRIES" ]; do
-            echo "mihomo.txt not found. Retry attempt $((retry_count + 1))/$MAX_RETRIES..."
-            sleep "$RETRY_INTERVAL"
-            # Re-run the generate step
-            python data/python/generate_mihomo_txt.py
-            retry_count=$((retry_count + 1))
-          done
-
-          if [ ! -f "$FILE_PATH" ]; then
-            echo "Error: mihomo.txt was not generated after $MAX_RETRIES attempts."
-            exit 1
-          else:
-            echo "mihomo.txt successfully generated."
-          fi
-
-      - name: Download Mihomo (linux-amd64)
+      - name: Download and install Mihomo
         run: |
           curl -s https://api.github.com/repos/MetaCubeX/mihomo/releases/latest \
             | jq -r '.assets[] | select(.name | test("linux-amd64.*\\.gz$")) | .browser_download_url' \
@@ -64,10 +31,40 @@ jobs:
           gunzip -f mihomo-linux-amd64.gz
           chmod +x mihomo-linux-amd64
 
-      - name: Convert mihomo.txt to adblock.mrs
+      - name: Download, Merge, and Deduplicate Rules
+        run: |
+          ADBLOCK_URLS='
+          https://lingeringsound.github.io/10007_auto/adb.txt
+          https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/AWAvenue-Ads-Rule.txt
+          https://raw.hellogithub.com/hosts
+          https://raw.githubusercontent.com/TG-Twilight/AWAvenue-Ads-Rule/main/Filters/AWAvenue-Ads-Rule-Replenish.txt
+          https://raw.githubusercontent.com/qq5460168/666/master/rules.txt
+          https://raw.githubusercontent.com/2Gardon/SM-Ad-FuckU-hosts/master/SMAdHosts
+          https://raw.githubusercontent.com/2771936993/HG/main/hg1.txt
+          https://raw.githubusercontent.com/afwfv/DD-AD/main/rule/DD-AD.txt
+          https://raw.githubusercontent.com/damengzhu/banad/main/jiekouAD.txt
+          '
+          OUTPUT_TXT="data/rules/temp_rules.txt"
+          mkdir -p "$(dirname "$OUTPUT_TXT")"
+          rm -f "$OUTPUT_TXT"
+
+          for url in $ADBLOCK_URLS; do
+            echo "[*] Downloading: $url"
+            curl -sSL "$url" >> "$OUTPUT_TXT"
+            echo "" >> "$OUTPUT_TXT" # Add a newline between files
+          done
+
+          sort -u "$OUTPUT_TXT" -o "$OUTPUT_TXT"
+
+          echo "[+] Merged and Deduplicated rules saved to $OUTPUT_TXT"
+
+      - name: Convert to mrs
         working-directory: data/rules
         run: |
-          ../../mihomo-linux-amd64 mrs pack -i mihomo.txt -o adblock.mrs
+          ../../mihomo-linux-amd64 convert-ruleset domain text temp_rules.txt adblock.mrs
+
+      - name: Delete temp file
+        run: rm -f data/rules/temp_rules.txt
 
       - name: Get current date
         id: date
